--- a/src/components/todo/TodoApp.css
+++ b/src/components/todo/TodoApp.css
@@ -1,4 +1,14 @@
-label, input, button {
-    margin: 10px;
-    padding: 5px;
+label,
+input,
+button {
+  margin: 10px;
+  padding: 5px;
 }
+
+footer {
+  bottom: 0;
+  position: absolute;
+  width: 90%;
+  height: 40px;
+}
+
